# avocodo

./: .gitignore  LICENSE.md  README.rst  pyproject.toml
avocodo/: data_module.py  inference.py  lightning_module.py  meldataset.py  pqmf.py  train.py
avocodo/configs/: avocodo_v1.json  avocodo_v2.json
avocodo/models/: CoMBD.py  SBD.py  generator.py  losses.py  utils.py
tests/: test_avocodo.py
